docs(lineage): L2 现场核查 —— Gravitino catalog 搭建 + Spark 真实读写采样
在五节点沙箱 Gravitino 上建好 paimon_fs/paimon_s3/doris_catalog 三个 catalog
并端到端验证（deploy/deployment-standalone-doris.md §7.14）；随后用官方
Spark 3.5.8 + openlineage-spark 做真实读写采样，得出两个关键结论：

- Paimon（filesystem/S3 两种 backend）与 Doris 专用连接器的 DSv2 catalog，
  openlineage-spark 从 1.29.0 到最新 1.52.0 均无任何支持（反编译确认，非配置
  问题），需要在架构层面决策如何应对
- Iceberg（Hadoop 类型 catalog）openlineage-spark 能正确采到，但命名法是
  "表物理存储路径"（namespace=文件系统 scheme，name=绝对路径），与既有 JDBC
  采样的 "namespace=scheme://host:port、name=database.table" 完全不同，
  CanonicalNameResolver 若要支持 Iceberg 需新增第三个分支

详见 docs/data-lineage-L1-交接-2026-07-30.md §8c/§8d/§8e，长期记忆已同步。